Setting dimension of objects parented in scaled object is broken #69536

Closed
opened 2019-09-05 13:49:28 +02:00 by Martin Capitanio · 4 comments

System Information

	build date: 2019-09-05
	build time: 12:53:35
	build commit date: 2019-09-05
	build commit time: 10:06
	build hash: 83875e978d62
	build platform: Linux
	build type: RelWithDebInfo

Blender Version
Broken: rB83875e978d62
Worked: never

Short description of error
Try to set the X dimension of Suzanne to 1m.
The widget shows the global value, but the entered value sets the local dimension.

The duplicated widget added to object properties in D5577 is even more broken.
It doesn't feel like it's intended for me. Please test it in the attached file:
{F7718156}
{F7718154}
{F7718378}

**System Information** ```Blender 2.81 (sub 8) build date: 2019-09-05 build time: 12:53:35 build commit date: 2019-09-05 build commit time: 10:06 build hash: 83875e978d62 build platform: Linux build type: RelWithDebInfo ``` **Blender Version** Broken: rB83875e978d62 Worked: never **Short description of error** Try to set the X dimension of Suzanne to 1m. The widget shows the global value, but the entered value sets the local dimension. The duplicated widget added to object properties in D5577 is even more broken. It doesn't feel like it's intended for me. Please test it in the attached file: {F7718156} {F7718154} {F7718378}

Added subscriber: @capnm

Added subscriber: @capnm

This issue was referenced by 82fc9d778e

This issue was referenced by 82fc9d778eecca16f867fd6e3aa3a2c04d86df4a

This issue was referenced by 39f3474cf1

This issue was referenced by 39f3474cf138c8245c0cb6faa314971dd465c6e7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-09-06 12:04:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69536
No description provided.